<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00ACC1"
    android:backgroundTint="#00ACC1"
    tools:context=".GateInActivity">

    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#0F115A"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="1dp"
        >

        <Button
            android:id="@+id/button9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#00ACC1"
            android:text="@string/menu"
            android:translationY="-5dp" />


        <EditText
            android:id="@+id/container_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ContainerNo"
            android:textColorHint="@color/white"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/white" />

        <LinearLayout
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Eqsize"
                    android:textColor="@color/white"/>
                <Spinner
                    android:id="@+id/eqsize"
                    android:layout_width="match_parent"
                    android:backgroundTint="#FFFFFF"
                    android:minHeight="45dp"
                    tools:ignore="SpeakableTextPresentCheck"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Eqtype"
                    android:textColor="@color/white"/>
                <Spinner
                    android:id="@+id/eqtype"
                    android:layout_width="match_parent"
                    android:backgroundTint="#FFFFFF"
                    android:minHeight="45dp"
                    tools:ignore="SpeakableTextPresentCheck"
                    android:layout_height="wrap_content"/>
            </LinearLayout>


        </LinearLayout>

        <CheckBox
            android:id="@+id/emptyCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="#FFFFFF"
            android:minHeight="40dp"
            android:text="Empty"
            android:textColor="#FAF7F7" />

        <CheckBox
            android:id="@+id/wait1_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="#FFFFFF"
            android:minHeight="40dp"
            android:text="Wait 1"
            android:textColor="#FBFBFB" />

        <CheckBox
            android:id="@+id/wait2_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="#FFFFFF"
            android:minHeight="40dp"
            android:text="Wait 2"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eor_date"
            android:textColor="@color/white" />

        <CalendarView
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#FBFAFA"
            android:weekNumberColor="#00ACC1"
            android:weekSeparatorLineColor="#00ACC1" />

        <Button
            android:id="@+id/submit_btn1"
            android:layout_width="164dp"
            android:layout_height="63dp"
            android:backgroundTint="#00ACC1"
            android:text="@string/gotofive" />

        <LinearLayout

            android:minHeight="50dp"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:minWidth="150dp"
                android:id="@+id/back_btn1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:backgroundTint="#00ACC1"
                android:text="@string/gotofourth" />
            <Space
                android:minWidth="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:minWidth="150dp"
                android:id="@+id/next_btn1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:backgroundTint="#00ACC1"
                android:text="@string/next" />
        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>