<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GateOutActivity">

    <LinearLayout
        android:weightSum="4"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#0F115A"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonMenu"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25"
            android:backgroundTint="#00ACC1"
            android:text="@string/menu" />

        <LinearLayout
            android:layout_weight="0.35"
            android:gravity="center_horizontal"
            android:weightSum="2"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <TextView
                android:layout_weight="0.5"
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/ContainerNo"
                android:textColor="@color/white"
                tools:ignore="NestedWeights" />

            <EditText
                android:layout_weight="1.5"
                android:id="@+id/container_id_query"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:ems="10"
                android:hint="@string/container_id"
                android:textColorHint="@color/white"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_weight="2"
            android:weightSum="2"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <TextView
                android:layout_weight="0.125"
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/completedate"
                android:textColor="@color/white" />

            <CalendarView
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_weight="1.875"
                android:id="@+id/calendarView2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal|top"
                android:background="#FBFAFA"
                android:weekNumberColor="@color/white"
                android:weekSeparatorLineColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="25dp"
            android:layout_weight="0.75"
            android:weightSum="2"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <LinearLayout
                android:gravity="center_horizontal"
                android:weightSum="3"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                tools:ignore="NestedWeights">
                <Button
                    android:layout_weight="1.5"
                    android:minHeight="80dp"
                    android:minWidth="180dp"
                    android:id="@+id/submit_btn2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:backgroundTint="#00ACC1"
                    android:text="@string/gotofive"
                    tools:ignore="NestedWeights" />
            </LinearLayout>

            <LinearLayout
                android:layout_weight="0.75"
                android:weightSum="3"
                android:minHeight="50dp"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal">
                <Button
                    android:minHeight="48dp"
                    android:layout_weight="1.25"
                    android:minWidth="150dp"
                    android:id="@+id/back_btn1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:backgroundTint="#00ACC1"
                    android:text="@string/gotofourth"
                    tools:ignore="NestedWeights" />
                <Space
                    android:layout_weight="0.125"
                    android:minWidth="10dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
                <Button
                    android:minHeight="48dp"
                    android:layout_weight="1.25"
                    android:minWidth="150dp"
                    android:id="@+id/next_btn1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:backgroundTint="#00ACC1"
                    android:text="@string/next" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>