<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="#0F115A"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    tools:context=".RegisterActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/image1"
            android:layout_width="375dp"
            android:layout_height="200dp"
            android:translationY="20dp"
            app:srcCompat="@mipmap/ic_launcher_profile" />

        <LinearLayout
            android:layout_width="400dp"
            android:layout_height="640dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp"
            android:translationY="10dp">


            <EditText
                android:id="@+id/username_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:minHeight="48dp"
                android:hint="@string/Username"
                android:textColor="@color/white"
                android:textColorHighlight="#F6F6F6"
                android:textColorHint="#F1EFEF"
                android:textColorLink="@color/white"
                android:textCursorDrawable="@color/white"
                android:textSize="14sp"
                android:translationY="-210dp" />

            <EditText
                android:id="@+id/password_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password_id_id"
                android:minHeight="48dp"
                android:textColor="@color/white"
                android:textColorHighlight="#F6F6F6"
                android:textColorHint="#F1EFEF"
                android:textColorLink="@color/white"
                android:textCursorDrawable="@color/white"
                android:textSize="14sp"
                android:translationY="-210dp" />

            <EditText
                android:id="@+id/confirm_password_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/confirm_password"
                android:minHeight="48dp"
                android:textColor="@color/white"
                android:textColorHighlight="#F6F6F6"
                android:textColorHint="#F1EFEF"
                android:textColorLink="@color/white"
                android:textCursorDrawable="@color/white"
                android:textSize="14sp"
                android:translationY="-210dp" />

            <Button
                android:id="@+id/register_btn"
                android:layout_width="400dp"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:background="@color/purple_700"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:translationY="-180dp"
                app:iconTint="@color/white"
                tools:ignore="TextContrastCheck" />




        </LinearLayout>

    </LinearLayout>

</RelativeLayout>